# bbget

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: compile-options-msvc.cmake  compile-options.cmake  dependencies.cmake
src/: CMakeLists.txt  boost_url_link.cpp  certs.cpp  certs.hpp  connection.cpp  connection.hpp  downloader.hpp  main.cpp  overload.hpp  proxy.cpp  proxy.hpp  stream.hpp
test/: CMakeLists.txt
